--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <section>
         <h1>
 <a id="yihuan-wei" class="anchor" href="#yihuan-wei" aria-hidden="true"><span class="octicon octicon-link"></span></a>Yihuan Wei</h1>
+<a id="y" class="anchor" href="#y" aria-hidden="true"><span class="octicon octicon-link"></span></a>Y</h1>
 
 <p>Email: <a href="mailto:yhwei09@gmail.com">yhwei09@gmail.com</a></p>
 
@@ -129,6 +130,11 @@
 <li>以邀请用户、追踪热点等不同方式每周为首页产生约10%的优质内容</li>
 <li>总结有奖问答活动经验，修改获奖规则和奖项设置，使获奖结果更合理，提高用户参与积极性</li>
 </ul>
+
+
+<p>
+<a href="#Y">查看 Chapter 4。</a>
+</p>
 
 <h5>
 <a id="其他经历" class="anchor" href="#%E5%85%B6%E4%BB%96%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>其他经历</h5>
