--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <section>
         <h1>
 <a id="yihuan-wei" class="anchor" href="#yihuan-wei" aria-hidden="true"><span class="octicon octicon-link"></span></a>Yihuan Wei</h1>
-<a id="y" class="anchor" href="#y" aria-hidden="true"><span class="octicon octicon-link"></span></a>Y</h1>
+<h1><a id="y" class="anchor" href="#y" aria-hidden="true"><span class="octicon octicon-link"></span></a>Y</h1>
 
 <p>Email: <a href="mailto:yhwei09@gmail.com">yhwei09@gmail.com</a></p>
 
