--- a/index.html
+++ b/index.html
@@ -1,73 +1,66 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Resume by yhwei</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Resume : ">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Resume</title>
   </head>
+
   <body>
 
-      <header>
-        <h1>Resume</h1>
-        <p></p>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/yhwei/Resume">View on GitHub</a>
 
-      <div id="banner">
-        <span id="logo"></span>
+          <h1 id="project_title">Resume</h1>
+          <h2 id="project_tagline"></h2>
 
-        <a href="https://github.com/yhwei/Resume" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/yhwei/Resume/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/yhwei/Resume/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/yhwei/Resume/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/yhwei/Resume/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-    <div class="wrapper">
-     
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="yihuan-wei" class="anchor" href="#yihuan-wei" aria-hidden="true"><span class="octicon octicon-link"></span></a>Yihuan Wei</h1>
 
-
 <p>Email: <a href="mailto:yhwei09@gmail.com">yhwei09@gmail.com</a></p>
 
-<h5>
-<a id="求职意向" class="anchor" href="#%E6%B1%82%E8%81%8C%E6%84%8F%E5%90%91" aria-hidden="true"><span class="octicon octicon-link"></span></a>求职意向</h5>
+<hr>
+
+<h3>
+<a id="求职意向" class="anchor" href="#%E6%B1%82%E8%81%8C%E6%84%8F%E5%90%91" aria-hidden="true"><span class="octicon octicon-link"></span></a>求职意向</h3>
 
 <p>产品相关职位</p>
 
-<h5>
-<a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>教育背景</h5>
+<hr>
 
-<p>2013/06　　复旦大学　　物理学学士</p>
+<h3>
+<a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>教育背景</h3>
+
+<p><strong>2013/06　　复旦大学　　物理学学士</strong></p>
 
 <ul>
 <li>复旦大学优秀学生 (3次，2009-2010）　　复旦大学优秀毕业生奖学金 (2013)<br>
+***
+### 工作经历
+####<strong>2014/01 – 2014/08　　产品助理　　百姓网（www.baixing.com） 上海</strong>
 </li>
 </ul>
 
-<h5>
-<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>工作经历</h5>
-
-<h6>
-<a id="201401--201408产品助理百姓网wwwbaixingcom-上海" class="anchor" href="#201401--201408%E4%BA%A7%E5%93%81%E5%8A%A9%E7%90%86%E7%99%BE%E5%A7%93%E7%BD%91wwwbaixingcom-%E4%B8%8A%E6%B5%B7" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2014/01 – 2014/08　　产品助理　　百姓网（www.baixing.com） 上海</strong>
-</h6>
-
-<h6>
-<a id="wap产品线功能改进数据监控" class="anchor" href="#wap%E4%BA%A7%E5%93%81%E7%BA%BF%E5%8A%9F%E8%83%BD%E6%94%B9%E8%BF%9B%E6%95%B0%E6%8D%AE%E7%9B%91%E6%8E%A7" aria-hidden="true"><span class="octicon octicon-link"></span></a>#<strong><em>WAP产品线：功能改进、数据监控</em></strong>
-</h6>
+<h4>
+<a id="wap产品线功能改进数据监控" class="anchor" href="#wap%E4%BA%A7%E5%93%81%E7%BA%BF%E5%8A%9F%E8%83%BD%E6%94%B9%E8%BF%9B%E6%95%B0%E6%8D%AE%E7%9B%91%E6%8E%A7" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>WAP产品线：功能改进、数据监控</em></strong>
+</h4>
 
 <ul>
 <li><p><strong>S</strong> 在WAP线数据庞杂不能有效反馈产品状况的情况下，对其分析整理； <strong>A</strong> 与WAP线开发及设计人员讨论，定义清楚转化率等各项核心指标；与BI部门协作，在数据库知识为零的基础上，自主学习并使用PostgreSQL制作日报、周报；建立并完善WAP产品线数据监控体系； <strong>R</strong> 使相关人员通过该数据体系能及时准确了解功能使用状况</p></li>
@@ -87,18 +80,15 @@
 <ul>
 <li>听取客服人员对用户反馈的月度总结，查看用户后台留言，主动联系极端用户，详细了解其需求</li>
 <li>提出测试需求，参加可用性测试，观察记录用户使用过程，总结使用问题并与相关人员讨论解决方案</li>
-<li>实地走访二手车、租房和求职等各类用户300多个，了解其生活场景：根据实际改进APP线下推广方式</li>
+<li>实地走访二手车、租房和求职等各类用户300多个，了解其生活场景：根据实际改进APP线下推广方式
+***
+####<strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（www.guokr.com）　　北京</strong>
+</li>
 </ul>
 
-<hr>
-
-<h6>
-<a id="201307---201311果壳问答运营实习生果壳网wwwguokrcom北京" class="anchor" href="#201307---201311%E6%9E%9C%E5%A3%B3%E9%97%AE%E7%AD%94%E8%BF%90%E8%90%A5%E5%AE%9E%E4%B9%A0%E7%94%9F%E6%9E%9C%E5%A3%B3%E7%BD%91wwwguokrcom%E5%8C%97%E4%BA%AC" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（www.guokr.com）　　北京</strong>
-</h6>
-
-<h6>
+<h4>
 <a id="用户维护" class="anchor" href="#%E7%94%A8%E6%88%B7%E7%BB%B4%E6%8A%A4" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>用户维护</em></strong>
-</h6>
+</h4>
 
 <ul>
 <li>深挖优质用户，与其深入交流，及时提醒他们参与到感兴趣内容中，给网站创造了更多优质内容</li>
@@ -107,18 +97,18 @@
 <li>维护网站秩序，审核处理不规范内容并提示用户修改，规范用户行为</li>
 </ul>
 
-<h6>
+<h4>
 <a id="数据分析" class="anchor" href="#%E6%95%B0%E6%8D%AE%E5%88%86%E6%9E%90" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>数据分析</em></strong>
-</h6>
+</h4>
 
 <ul>
 <li>自主运用Matlab、MS Excel等工具统计及分析日常运营数据，根据多项数据的差异比较，针对不同情况进行运营方式改进：使问答数量提升6%</li>
 <li>与技术部门协作完成问答活动的数据统计，给出活动结果的奖项排名</li>
 </ul>
 
-<h6>
+<h4>
 <a id="内容创造" class="anchor" href="#%E5%86%85%E5%AE%B9%E5%88%9B%E9%80%A0" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>内容创造</em></strong>
-</h6>
+</h4>
 
 <ul>
 <li>快速熟悉网站原创内容，选取优质内容制作了15期“每周get新技能”专题页面，增加精彩问答的回访率（常规专题页之一：<a href="http://www.guokr.com/zone/newskill004/%EF%BC%89">http://www.guokr.com/zone/newskill004/）</a>
@@ -126,48 +116,32 @@
 <li>制作“向万有青年提问”等活动专题页面并在首页推广，提高了浏览数和问答数量 （活动页面之一：<a href="http://www.guokr.com/zone/askrobert/%EF%BC%89">http://www.guokr.com/zone/askrobert/）</a>
 </li>
 <li>以邀请用户、追踪热点等不同方式每周为首页产生约10%的优质内容</li>
-<li>总结有奖问答活动经验，修改获奖规则和奖项设置，使获奖结果更合理，提高用户参与积极性</li>
+<li>总结有奖问答活动经验，修改获奖规则和奖项设置，使获奖结果更合理，提高用户参与积极性
+***
+###其他经历
+####<strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong>
+网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站
+####<strong>2010/05　　2010年上海世博会优秀志愿者</strong>
+####<strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong>
+***
+###语言及技能
+英语：CET-6， 雅思7分　　粤语（母语）</li>
 </ul>
-
-
-<p>
-<a href="#Y">查看 Chapter 4。</a>
-</p>
-
-<h5>
-<a id="其他经历" class="anchor" href="#%E5%85%B6%E4%BB%96%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>其他经历</h5>
-
-<h6>
-<a id="201307-201308学术宅-自发建立的一个方便学术研究生进行讨论的兴趣网站项目成员" class="anchor" href="#201307-201308%E5%AD%A6%E6%9C%AF%E5%AE%85-%E8%87%AA%E5%8F%91%E5%BB%BA%E7%AB%8B%E7%9A%84%E4%B8%80%E4%B8%AA%E6%96%B9%E4%BE%BF%E5%AD%A6%E6%9C%AF%E7%A0%94%E7%A9%B6%E7%94%9F%E8%BF%9B%E8%A1%8C%E8%AE%A8%E8%AE%BA%E7%9A%84%E5%85%B4%E8%B6%A3%E7%BD%91%E7%AB%99%E9%A1%B9%E7%9B%AE%E6%88%90%E5%91%98" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong>
-</h6>
-
-<p>网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站</p>
-
-<h6>
-<a id="2010052010年上海世博会优秀志愿者" class="anchor" href="#2010052010%E5%B9%B4%E4%B8%8A%E6%B5%B7%E4%B8%96%E5%8D%9A%E4%BC%9A%E4%BC%98%E7%A7%80%E5%BF%97%E6%84%BF%E8%80%85" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2010/05　　2010年上海世博会优秀志愿者</strong>
-</h6>
-
-<h6>
-<a id="200909---201101复旦大学团委世博志愿者工作站项目部部长助理" class="anchor" href="#200909---201101%E5%A4%8D%E6%97%A6%E5%A4%A7%E5%AD%A6%E5%9B%A2%E5%A7%94%E4%B8%96%E5%8D%9A%E5%BF%97%E6%84%BF%E8%80%85%E5%B7%A5%E4%BD%9C%E7%AB%99%E9%A1%B9%E7%9B%AE%E9%83%A8%E9%83%A8%E9%95%BF%E5%8A%A9%E7%90%86" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong>
-</h6>
-
-<hr>
-
-<h5>
-<a id="语言及技能" class="anchor" href="#%E8%AF%AD%E8%A8%80%E5%8F%8A%E6%8A%80%E8%83%BD" aria-hidden="true"><span class="octicon octicon-link"></span></a>语言及技能</h5>
-
-<p>英语：CET-6， 雅思7分　　粤语（母语）</p>
 
 <p>数据处理：MS Office, Google Analytics, SQL, Matlab, Spotfire</p>
 
 <p>产品设计： Axure, Visio, Photoshop, HTML</p>
       </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/yhwei">yhwei</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Resume maintained by <a href="https://github.com/yhwei">yhwei</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -178,6 +152,7 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
