--- a/index.html
+++ b/index.html
@@ -51,12 +51,17 @@
 <p><strong>2013/06　　复旦大学　　物理学学士</strong></p>
 
 <ul>
-<li>复旦大学优秀学生 (3次，2009-2010）　　复旦大学优秀毕业生奖学金 (2013)<br>
-***
-### 工作经历
-####<strong>2014/01 – 2014/08　　产品助理　　百姓网（www.baixing.com） 上海</strong>
-</li>
+<li>复旦大学优秀学生 (3次，2009-2010）　　复旦大学优秀毕业生奖学金 (2013)</li>
 </ul>
+
+<hr>
+
+<h3>
+<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>工作经历</h3>
+
+<h4>
+<a id="201401--201408产品助理百姓网wwwbaixingcom-上海" class="anchor" href="#201401--201408%E4%BA%A7%E5%93%81%E5%8A%A9%E7%90%86%E7%99%BE%E5%A7%93%E7%BD%91wwwbaixingcom-%E4%B8%8A%E6%B5%B7" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2014/01 – 2014/08　　产品助理　　百姓网（www.baixing.com） 上海</strong>
+</h4>
 
 <h4>
 <a id="wap产品线功能改进数据监控" class="anchor" href="#wap%E4%BA%A7%E5%93%81%E7%BA%BF%E5%8A%9F%E8%83%BD%E6%94%B9%E8%BF%9B%E6%95%B0%E6%8D%AE%E7%9B%91%E6%8E%A7" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>WAP产品线：功能改进、数据监控</em></strong>
@@ -80,11 +85,14 @@
 <ul>
 <li>听取客服人员对用户反馈的月度总结，查看用户后台留言，主动联系极端用户，详细了解其需求</li>
 <li>提出测试需求，参加可用性测试，观察记录用户使用过程，总结使用问题并与相关人员讨论解决方案</li>
-<li>实地走访二手车、租房和求职等各类用户300多个，了解其生活场景：根据实际改进APP线下推广方式
-***
-####<strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（www.guokr.com）　　北京</strong>
-</li>
+<li>实地走访二手车、租房和求职等各类用户300多个，了解其生活场景：根据实际改进APP线下推广方式</li>
 </ul>
+
+<hr>
+
+<h4>
+<a id="201307---201311果壳问答运营实习生果壳网wwwguokrcom北京" class="anchor" href="#201307---201311%E6%9E%9C%E5%A3%B3%E9%97%AE%E7%AD%94%E8%BF%90%E8%90%A5%E5%AE%9E%E4%B9%A0%E7%94%9F%E6%9E%9C%E5%A3%B3%E7%BD%91wwwguokrcom%E5%8C%97%E4%BA%AC" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（www.guokr.com）　　北京</strong>
+</h4>
 
 <h4>
 <a id="用户维护" class="anchor" href="#%E7%94%A8%E6%88%B7%E7%BB%B4%E6%8A%A4" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>用户维护</em></strong>
@@ -116,17 +124,34 @@
 <li>制作“向万有青年提问”等活动专题页面并在首页推广，提高了浏览数和问答数量 （活动页面之一：<a href="http://www.guokr.com/zone/askrobert/%EF%BC%89">http://www.guokr.com/zone/askrobert/）</a>
 </li>
 <li>以邀请用户、追踪热点等不同方式每周为首页产生约10%的优质内容</li>
-<li>总结有奖问答活动经验，修改获奖规则和奖项设置，使获奖结果更合理，提高用户参与积极性
-***
-###其他经历
-####<strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong>
-网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站
-####<strong>2010/05　　2010年上海世博会优秀志愿者</strong>
-####<strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong>
-***
-###语言及技能
-英语：CET-6， 雅思7分　　粤语（母语）</li>
+<li>总结有奖问答活动经验，修改获奖规则和奖项设置，使获奖结果更合理，提高用户参与积极性</li>
 </ul>
+
+<hr>
+
+<h3>
+<a id="其他经历" class="anchor" href="#%E5%85%B6%E4%BB%96%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>其他经历</h3>
+
+<h4>
+<a id="201307-201308学术宅-自发建立的一个方便学术研究生进行讨论的兴趣网站项目成员" class="anchor" href="#201307-201308%E5%AD%A6%E6%9C%AF%E5%AE%85-%E8%87%AA%E5%8F%91%E5%BB%BA%E7%AB%8B%E7%9A%84%E4%B8%80%E4%B8%AA%E6%96%B9%E4%BE%BF%E5%AD%A6%E6%9C%AF%E7%A0%94%E7%A9%B6%E7%94%9F%E8%BF%9B%E8%A1%8C%E8%AE%A8%E8%AE%BA%E7%9A%84%E5%85%B4%E8%B6%A3%E7%BD%91%E7%AB%99%E9%A1%B9%E7%9B%AE%E6%88%90%E5%91%98" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong>
+</h4>
+
+<p>网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站</p>
+
+<h4>
+<a id="2010052010年上海世博会优秀志愿者" class="anchor" href="#2010052010%E5%B9%B4%E4%B8%8A%E6%B5%B7%E4%B8%96%E5%8D%9A%E4%BC%9A%E4%BC%98%E7%A7%80%E5%BF%97%E6%84%BF%E8%80%85" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2010/05　　2010年上海世博会优秀志愿者</strong>
+</h4>
+
+<h4>
+<a id="200909---201101复旦大学团委世博志愿者工作站项目部部长助理" class="anchor" href="#200909---201101%E5%A4%8D%E6%97%A6%E5%A4%A7%E5%AD%A6%E5%9B%A2%E5%A7%94%E4%B8%96%E5%8D%9A%E5%BF%97%E6%84%BF%E8%80%85%E5%B7%A5%E4%BD%9C%E7%AB%99%E9%A1%B9%E7%9B%AE%E9%83%A8%E9%83%A8%E9%95%BF%E5%8A%A9%E7%90%86" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong>
+</h4>
+
+<hr>
+
+<h3>
+<a id="语言及技能" class="anchor" href="#%E8%AF%AD%E8%A8%80%E5%8F%8A%E6%8A%80%E8%83%BD" aria-hidden="true"><span class="octicon octicon-link"></span></a>语言及技能</h3>
+
+<p>英语：CET-6， 雅思7分　　粤语（母语）</p>
 
 <p>数据处理：MS Office, Google Analytics, SQL, Matlab, Spotfire</p>
 
