--- a/index.html
+++ b/index.html
@@ -13,19 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-58095052-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-
-    <title>Resume of Yihuan Wei</title>
+    <title>Yihuan Wei by yhwei</title>
   </head>
 
   <body>
@@ -50,7 +38,9 @@
 <h3>
 <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>教育背景</h3>
 
-<p><strong>2013/06　　复旦大学　　物理学学士</strong></p>
+<h4>
+<a id="201306复旦大学物理学学士" class="anchor" href="#201306%E5%A4%8D%E6%97%A6%E5%A4%A7%E5%AD%A6%E7%89%A9%E7%90%86%E5%AD%A6%E5%AD%A6%E5%A3%AB" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/06　　复旦大学　　物理学学士</strong>
+</h4>
 
 <ul>
 <li>复旦大学优秀学生 (3次，2009-2010）　　复旦大学优秀毕业生奖学金 (2013)</li>
