--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
 <h3>
 <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>教育背景</h3>
 
-<h4>
-<a id="201306复旦大学物理学学士" class="anchor" href="#201306%E5%A4%8D%E6%97%A6%E5%A4%A7%E5%AD%A6%E7%89%A9%E7%90%86%E5%AD%A6%E5%AD%A6%E5%A3%AB" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/06　　复旦大学　　物理学学士</strong>
-</h4>
+<p><strong>2013/06　　复旦大学　　物理学学士</strong></p>
 
 <ul>
 <li>复旦大学优秀学生 (3次，2009-2010）　　复旦大学优秀毕业生奖学金 (2013)</li>
@@ -51,9 +49,7 @@
 <h3>
 <a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>工作经历</h3>
 
-<h4>
-<a id="201401--201408产品助理百姓网wwwbaixingcom-上海" class="anchor" href="#201401--201408%E4%BA%A7%E5%93%81%E5%8A%A9%E7%90%86%E7%99%BE%E5%A7%93%E7%BD%91wwwbaixingcom-%E4%B8%8A%E6%B5%B7" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2014/01 – 2014/08　　产品助理　　百姓网（<a href="www.baixing.com">www.baixing.com</a>） 上海</strong>
-</h4>
+<p><strong>2014/01 – 2014/08　　产品助理　　百姓网（<a href="www.baixing.com">www.baixing.com</a>） 上海</strong></p>
 
 <h4>
 <a id="wap产品线功能改进数据监控" class="anchor" href="#wap%E4%BA%A7%E5%93%81%E7%BA%BF%E5%8A%9F%E8%83%BD%E6%94%B9%E8%BF%9B%E6%95%B0%E6%8D%AE%E7%9B%91%E6%8E%A7" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>WAP产品线：功能改进、数据监控</em></strong>
@@ -82,9 +78,7 @@
 
 <hr>
 
-<h4>
-<a id="201307---201311果壳问答运营实习生果壳网wwwguokrcom北京" class="anchor" href="#201307---201311%E6%9E%9C%E5%A3%B3%E9%97%AE%E7%AD%94%E8%BF%90%E8%90%A5%E5%AE%9E%E4%B9%A0%E7%94%9F%E6%9E%9C%E5%A3%B3%E7%BD%91wwwguokrcom%E5%8C%97%E4%BA%AC" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（<a href="www.guokr.com">www.guokr.com</a>）　　北京</strong>
-</h4>
+<p><strong>2013/07 - 2013/11　　果壳问答运营实习生　　果壳网（<a href="www.guokr.com">www.guokr.com</a>）　　北京</strong></p>
 
 <h4>
 <a id="用户维护" class="anchor" href="#%E7%94%A8%E6%88%B7%E7%BB%B4%E6%8A%A4" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>用户维护</em></strong>
@@ -122,22 +116,11 @@
 <h3>
 <a id="其他经历" class="anchor" href="#%E5%85%B6%E4%BB%96%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>其他经历</h3>
 
-<h4>
-<a id="201307-201308学术宅-自发建立的一个方便学术研究生进行讨论的兴趣网站项目成员" class="anchor" href="#201307-201308%E5%AD%A6%E6%9C%AF%E5%AE%85-%E8%87%AA%E5%8F%91%E5%BB%BA%E7%AB%8B%E7%9A%84%E4%B8%80%E4%B8%AA%E6%96%B9%E4%BE%BF%E5%AD%A6%E6%9C%AF%E7%A0%94%E7%A9%B6%E7%94%9F%E8%BF%9B%E8%A1%8C%E8%AE%A8%E8%AE%BA%E7%9A%84%E5%85%B4%E8%B6%A3%E7%BD%91%E7%AB%99%E9%A1%B9%E7%9B%AE%E6%88%90%E5%91%98" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong>
-</h4>
-
-<p>网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站</p>
-
-<h4>
-<a id="2010052010年上海世博会优秀志愿者" class="anchor" href="#2010052010%E5%B9%B4%E4%B8%8A%E6%B5%B7%E4%B8%96%E5%8D%9A%E4%BC%9A%E4%BC%98%E7%A7%80%E5%BF%97%E6%84%BF%E8%80%85" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2010/05　　　　　　　2010年上海世博会优秀志愿者</strong>
-</h4>
-
-<h4>
-<a id="200909---201101复旦大学团委世博志愿者工作站项目部部长助理" class="anchor" href="#200909---201101%E5%A4%8D%E6%97%A6%E5%A4%A7%E5%AD%A6%E5%9B%A2%E5%A7%94%E4%B8%96%E5%8D%9A%E5%BF%97%E6%84%BF%E8%80%85%E5%B7%A5%E4%BD%9C%E7%AB%99%E9%A1%B9%E7%9B%AE%E9%83%A8%E9%83%A8%E9%95%BF%E5%8A%A9%E7%90%86" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong>
-</h4>
-
-<h4>
-<a id="豆瓣小组bbs等社区活跃者组织过多次线下聚会" class="anchor" href="#%E8%B1%86%E7%93%A3%E5%B0%8F%E7%BB%84bbs%E7%AD%89%E7%A4%BE%E5%8C%BA%E6%B4%BB%E8%B7%83%E8%80%85%E7%BB%84%E7%BB%87%E8%BF%87%E5%A4%9A%E6%AC%A1%E7%BA%BF%E4%B8%8B%E8%81%9A%E4%BC%9A" aria-hidden="true"><span class="octicon octicon-link"></span></a>豆瓣小组，BBS等社区活跃者，组织过多次线下聚会</h4>
+<p><strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong>
+网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站
+<strong>2010/05　　　　　　　2010年上海世博会优秀志愿者</strong>
+<strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong>
+豆瓣小组，BBS等社区活跃者，组织过多次线下聚会</p>
 
 <hr>
 
