--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             } catch(err) {}
           </script>
           
-<div id="surveyMonkeyInfo" style="width:730px;font-size:10px;color:#666;"><div><iframe id="sm_e_s" src="https://www.surveymonkey.com/jsEmbed.aspx?sm=100q3dscpqHBIL2_2b8kYmqQ_3d_3d" width="730" height="300" style="border:0px;padding-left:50%;padding-bottom:4px;" frameborder="0" allowtransparency="true" ></iframe>
+<div id="surveyMonkeyInfo" style="width:730px;font-size:10px;color:#666;"><div><iframe id="sm_e_s" src="https://www.surveymonkey.com/jsEmbed.aspx?sm=100q3dscpqHBIL2_2b8kYmqQ_3d_3d" width="730" height="300" style="border:0px;padding-left:500px;padding-bottom:4px;" frameborder="0" allowtransparency="true" ></iframe>
 </div>
   </body>
 </html>
