--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Resume of Yihuan Wei</title>
+    <title>Yihuan Wei by yhwei</title>
   </head>
 
   <body>
@@ -64,7 +64,7 @@
 <p><strong><em>Web产品线：运营分析</em></strong></p>
 
 <ul>
-<li><p><strong>S</strong> 参与全站信息标签化的项目；<strong>T</strong> 为网站信息标签化做数据监控；<strong>A</strong> 和相关人员讨论协作，建立和标签相关的数据体系，制定检验规则并自主建报表将其实现；<strong>R</strong> 实时反馈信息标签化过程中的错漏</p></li>
+<li><p><strong>S</strong> 参与全站信息标签化的项目；<strong>T</strong> 为网站信息标签化做数据监控；<strong>A</strong> 和相关人员讨论协作，建立和标签相关的数据体系，制定检验规则；<strong>R</strong> 实时反馈信息标签化过程中的错漏</p></li>
 <li><p>为提高用户信息查找效率；研究 web端类目页面的筛选项存在问题；自主提取多项数据，定义并分析信息查找过程的各项转化率，提出改进方案</p></li>
 </ul>
 
@@ -116,10 +116,10 @@
 <h3>
 <a id="其他经历" class="anchor" href="#%E5%85%B6%E4%BB%96%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>其他经历</h3>
 
-<p><strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong><br>
-网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站<br>
-<strong>2010/05　　　　　　　2010年上海世博会优秀志愿者</strong><br>
-<strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong><br>
+<p><strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong>
+网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站
+<strong>2010/05　　　　　　　2010年上海世博会优秀志愿者</strong>
+<strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong>
 豆瓣小组，BBS等社区活跃者，组织过多次线下聚会</p>
 
 <hr>
@@ -131,7 +131,12 @@
 
 <p>数据处理：MS Office, Google Analytics, SQL, Matlab, Spotfire</p>
 
-<p>产品设计： Axure, Visio, Photoshop, HTML</p><br>
+<p>产品设计： Axure, Visio, Photoshop, HTML</p>
+
+<hr>
+
+<h3>
+<a id="反馈及留言" class="anchor" href="#%E5%8F%8D%E9%A6%88%E5%8F%8A%E7%95%99%E8%A8%80" aria-hidden="true"><span class="octicon octicon-link"></span></a>反馈及留言</h3>
         </section>
 
         <aside id="sidebar">
@@ -161,8 +166,6 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-          
-<div id="surveyMonkeyInfo" style="width:730px;font-size:10px;color:#666;"><div><iframe id="sm_e_s" src="https://www.surveymonkey.com/jsEmbed.aspx?sm=100q3dscpqHBIL2_2b8kYmqQ_3d_3d" width="730" height="300" style="border:0px;padding-left:200px;padding-bottom:4px;" frameborder="0" allowtransparency="true" ></iframe>
-</div>
+
   </body>
 </html>
