--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-<div id="surveyMonkeyInfo" style="width:730px;font-size:10px;color:#666;"><div><iframe id="sm_e_s" src="https://www.surveymonkey.com/jsEmbed.aspx?sm=100q3dscpqHBIL2_2b8kYmqQ_3d_3d" width="730" height="300" style="border:0px;padding-bottom:4px;" padding-left:192px;frameborder="0" allowtransparency="true" ></iframe></div>Create your free online surveys with <a href="https://www.surveymonkey.com">SurveyMonkey</a> , the world's leading questionnaire tool.</div>
+<div id="surveyMonkeyInfo" style="width:730px;font-size:10px;color:#666;"><div><iframe id="sm_e_s" src="https://www.surveymonkey.com/jsEmbed.aspx?sm=100q3dscpqHBIL2_2b8kYmqQ_3d_3d" width="730" height="300" style="border:0px;padding-bottom:4px;padding-left:192px;" frameborder="0" allowtransparency="true" ></iframe></div>Create your free online surveys with <a href="https://www.surveymonkey.com">SurveyMonkey</a> , the world's leading questionnaire tool.</div>
 
   </body>
 </html>
