--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <p><strong>2013/06　　复旦大学　　物理学学士</strong></p>
 
 <ul>
-<li>复旦大学优秀学生 (3次，2009-2010）　　复旦大学优秀毕业生奖学金 (2013)</li>
+<li>复旦大学优秀学生 (2次，2009-2010）　　复旦大学优秀毕业生奖学金 (2013)</li>
 </ul>
 
 <hr>
@@ -49,7 +49,7 @@
 <h3>
 <a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>工作经历</h3>
 
-<p><strong>2014/01 – 2014/08　　产品助理　　百姓网（<a href="www.baixing.com">www.baixing.com</a>） 上海</strong></p>
+<p><strong>2014/01 - 2014/08　　产品助理　　百姓网（<a href="www.baixing.com">www.baixing.com</a>） 上海</strong></p>
 
 <h4>
 <a id="wap产品线功能改进数据监控" class="anchor" href="#wap%E4%BA%A7%E5%93%81%E7%BA%BF%E5%8A%9F%E8%83%BD%E6%94%B9%E8%BF%9B%E6%95%B0%E6%8D%AE%E7%9B%91%E6%8E%A7" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>WAP产品线：功能改进、数据监控</em></strong>
@@ -116,7 +116,7 @@
 <h3>
 <a id="其他经历" class="anchor" href="#%E5%85%B6%E4%BB%96%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>其他经历</h3>
 
-<p><strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong><br>
+<p><strong>2013/07 - 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong><br>
 网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站<br>
 <strong>2010/05　　　　　　　2010年上海世博会优秀志愿者</strong><br>
 <strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong><br>
