--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站<br>
 <strong>2010/05　　　　　　　2010年上海世博会优秀志愿者</strong><br>
 <strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong><br>
+<strong><a href="http://zh.wikipedia.org/wiki/%E4%BD%A0_(%E6%97%B6%E4%BB%A3%E5%B9%B4%E5%BA%A6%E9%A3%8E%E4%BA%91%E4%BA%BA%E7%89%A9)" target="view_window">2006年《时代》杂志的年度风云人物</a></strong><br>
 豆瓣小组，BBS等社区活跃者，组织过多次线下聚会</p>
 
 <hr>
