--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
 
 <ul>
 <li><p>在WAP线数据庞杂不能有效反馈产品状况的情况下，对其分析整理；与WAP线开发及设计人员讨论，定义清楚转化率等各项核心指标；与BI部门协作，在数据库知识为零的基础上，自主学习并使用PostgreSQL制作日报、周报；建立并完善WAP产品线数据监控体系；使相关人员通过该数据体系能及时准确了解功能使用状况</p></li>
-<li><p>进行现有产品优化；发掘现有使用问题；熟练运用SQL提取和处理了大量复杂数据，找出不合理的转化环节；与各种具有同类功能的产品比较借鉴；用Visio优化流程图；跟进开发过程，进行A/B测试；关注上线前后数据表现和用户反馈，及时与各部门沟通解决相关问题；对每项改动撰写完善的记录文档；更实际地满足用户需求，从细节上改善了用户体验</p></li>
-<li><p>GA对当前用户的使用设备情况统计不准确，无法判断技术应用方案；了解技术改进需求，独立编程提取数据，用Spotfire统计分析了相关数据并将其做成可视化模板；让技术人员可以通过该模板简单点击切换维度，及时了解用户的使用设备情况，为前端技术改进提供依据 </p></li>
+<li><p>为进行现有产品优化，需发掘现有使用问题：熟练运用SQL提取和处理了大量复杂数据，找出不合理的转化环节；与各种具有同类功能的产品比较借鉴；用Visio优化流程图；跟进开发过程，进行A/B测试；关注上线前后数据表现和用户反馈，及时与各部门沟通解决相关问题；对每项改动撰写完善的记录文档；更实际地满足用户需求，从细节上改善了用户体验</p></li>
+<li><p>Google Analytics对当前用户的使用设备情况统计不准确，无法判断技术应用方案；了解技术改进需求，独立编程提取数据，用Spotfire统计分析了相关数据并将其做成可视化模板；让技术人员可以通过该模板简单点击切换维度，及时了解用户的使用设备情况，为前端技术改进提供依据 </p></li>
 </ul>
 
 <p><strong><em>Web产品线：运营分析</em></strong></p>
 
 <ul>
-<li><p>参与全站信息标签化的项目；为网站信息标签化做数据监控；和相关人员讨论协作，建立和标签相关的数据体系，制定检验规则；实时反馈信息标签化过程中的错漏</p></li>
-<li><p>为提高用户信息查找效率；研究 web端类目页面的筛选项存在问题；自主提取多项数据，定义并分析信息查找过程的各项转化率，提出改进方案</p></li>
+<li><p>参与全站信息标签化的项目，为网站信息标签化做数据监控：和相关人员讨论协作，建立和标签相关的数据体系，制定检验规则；实时反馈信息标签化过程中的错漏,加速和完善标签化进程</p></li>
+<li><p>为提高用户信息查找效率，研究 web端类目页面的筛选项存在问题：自主提取多项数据，定义并分析信息查找过程的各项转化率，提出改进方案</p></li>
 </ul>
 
 <p><strong><em>全站用户研究</em></strong></p>
