--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <a id="其他经历" class="anchor" href="#%E5%85%B6%E4%BB%96%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>其他经历</h3>
 
 <p>
-<strong><a href="http://zh.wikipedia.org/wiki/%E4%BD%A0_(%E6%97%B6%E4%BB%A3%E5%B9%B4%E5%BA%A6%E9%A3%8E%E4%BA%91%E4%BA%BA%E7%89%A9)" target="view_window">2006年《时代》周刊年度风云人物 (just played a trick ^_^)</a></strong><br>
+<strong><a href="http://zh.wikipedia.org/wiki/%E4%BD%A0_(%E6%97%B6%E4%BB%A3%E5%B9%B4%E5%BA%A6%E9%A3%8E%E4%BA%91%E4%BA%BA%E7%89%A9)" target="view_window">2006年《时代》周刊年度风云人物 </a>  (just played a trick ^_^)</strong><br>
 <strong>2013/07 - 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong><br>
 网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站<br>
 <strong>2010/05　　　　　　　2010年上海世博会优秀志愿者</strong><br>
