--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
 </ul>
 
 <h4>
-<a id="处理国外用户反馈研究竞品信息" class="anchor" href="#%E5%A4%84%E7%90%86%E5%9B%BD%E5%A4%96%E7%94%A8%E6%88%B7%E5%8F%8D%E9%A6%88%E7%A0%94%E7%A9%B6%E7%AB%9E%E5%93%81%E4%BF%A1%E6%81%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>处理国外用户反馈，研究竞品信息</em></strong>
+<a id="处理国外用户反馈，研究竞品信息" class="anchor" href="#%E5%A4%84%E7%90%86%E5%9B%BD%E5%A4%96%E7%94%A8%E6%88%B7%E5%8F%8D%E9%A6%88%E7%A0%94%E7%A9%B6%E7%AB%9E%E5%93%81%E4%BF%A1%E6%81%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>处理国外用户反馈，研究竞品信息</em></strong>
 </h4>
 
 <ul>
-<li>回复用户的各国语言反馈邮件，了解用户使用场景，对比竟品类似功能</li>
+<li>回复用户的各国语言反馈邮件，了解用户使用场景，对比竞品类似功能</li>
 </ul>
 
 <hr>
@@ -189,10 +189,11 @@
 <h3>
 <a id="其他经历" class="anchor" href="#%E5%85%B6%E4%BB%96%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>其他经历</h3>
 
-<p><strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong>
+<p><strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong>  
 网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站<br>
 <strong>2010/05　　　　　　　2010年上海世博会优秀志愿者</strong><br>
-<strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong><br>
+<strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong><br>  
+<a href="http://zh.wikipedia.org/wiki/%E4%BD%A0_(%E6%97%B6%E4%BB%A3%E5%B9%B4%E5%BA%A6%E9%A3%8E%E4%BA%91%E4%BA%BA%E7%89%A9"><strong>2006年度时代风云人物</strong></a> 
 豆瓣小组，BBS等社区活跃者，组织过多次线下聚会  </p>
 
 <hr>
